<resources>
    <string name="app_name">WinHey</string>
    <string name="payment_string">Take the screenshot and pay through any upi and add the transaction id below</string>
    <string name="enter_the_transaction_id">Enter the Transaction Id</string>
    <string name="transaction_update">Transaction id is updated, the money will be credited in 1-2 hours</string>
    <string name="update_button">Update</string>
    <string name="winning_amount_2000">Winning Amount : 2000</string>
    <string name="withdraw_cash">Withdraw</string>
    <string name="current_balance_2000">Current Balance : 2000</string>
    <string name="add_cash">Add Money</string>
    <string name="play">Play</string>
    <string name="go_to_admin_pannel">Go to admin pannel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="save_your_image_in_a_new_way">Save your Image in a new way!</string>
    <string name="email_address">Email address</string>
    <string name="login">LogIn</string>
    <string name="add_image_button">Add Image Button</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin">Pin</string>
    <string name="add">Add</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>
    <string name="create_user">Create Player</string>
    <string name="delete_user">Delete User</string>
    <string name="block_user">Block User</string>
    <string name="fetch_user_details">Fetch User Details</string>
    <string name="update_user">Update User</string>
    <string name="user_id">User Name</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="create_new_user">Create New User</string>
    <string name="username">Username:</string>
    <string name="total_won">Total Won:</string>
    <string name="three_dot">⋮</string>
    <string name="enter_the_amount_to_withdraw">Enter the amount to withdraw</string>
    <string name="enter_your_upi_address">Enter your UPI address</string>
    <string name="withdraw">Withdraw</string>
    <string name="_0_0">0.0</string>
    <string name="update">Update</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="total_loss">Total Loss</string>
    <string name="id">Id</string>
    <string name="total_game_played">Total Game Played</string>
    <string name="errorview">ErrorView</string>
    <string name="errorviewe">Error</string>
    <string name="error_message">Error message</string>
    <string name="notification">Notification</string>
    <string name="upi_address">Upi Address</string>
    <string name="transactionid">TransactionId</string>
    <string name="deposit_withdraw">Deposit/Withdraw</string>
    <string name="home">Home</string>
    <string name="referral">Referral</string>
    <string name="profile">Profile</string>
    <string name="error">Error</string>
    <string name="no_user_found">No User Found</string>
    <string name="add_updated_balance">Add updated balance</string>
    <string name="logout">Logout</string>
    <string name="refer_your_friend">Refer your Friend!</string>
    <string name="add_money_withdraw_money">Add Money | Withdraw Money</string>
    <string name="refer_now_earn_upto_100"><![CDATA[Refer now & Earn upto 100]]></string>
    <string name="send_the_referal_link_via_sms_whatsapp_phone">Send the referal link via sms/whatsapp/phone</string>
    <string name="refer_now">Refer Now</string>
    <string name="deposited_amount">Deposited Amount</string>
    <string name="fetch_transaction_details">Fetch Transaction Details</string>
    <string name="flip_flop_solitarie">Flip-Flop Solitarie</string>
    <string name="add_more">Add more</string>
    <string name="submit">Submit</string>
    <string name="add_new_qr">Add new QR</string>
    <string name="join">Join</string>
    <string name="rohit">Rohit</string>
    <string name="virat">Virat</string>
    <string name="dhoni">Dhoni</string>
    <string name="text">Text</string>
    <string name="better_luck_next_time">Better Luck Next Time</string>
    <string name="won">Hurray !!! Won</string>
    <string name="withdrawal_amount">Withdrawal Amount :</string>
    <string name="app_update_message">New updates are available please update your app for better performance.</string>
    <string name="current_balance">Current Balance :</string>
    <string name="winning_amount">Winning Amount :</string>
    <string name="_50_of_winning_amount">(100% of winning amount)</string>
    <string name="add_updated_winning_balance">Add updated winning balance</string>
    <string name="request_balance">Request Balance</string>
    <string name="withdraw_request">Withdraw Request</string>
    <string name="deposit_request">Deposit Request</string>
    <string name="_0000">0000</string>
    <string name="winning_information">Winning Information</string>
    <string name="live_game_play_and_earn">Live Game (Play and Earn)</string>
    <string name="coming_soon">Coming soon ..</string>
    <string name="top_performer">Top Performer</string>
    <string name="today_s_ranking_income">Today\'s Ranking Income</string>
    <string name="my_history">My History</string>
    <string name="game_history">Game History</string>
    <string name="game_id">Game Id :</string>
    <string name="participants">Participants</string>
    <string name="option">Option</string>
    <string name="result">Result</string>
    <string name="game">Game   :</string>
    <string name="_1">1</string>
    <string name="_00_00">00:00</string>
    <string name="left_time_to_buy">Left time to Buy</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_new_account">Want to Create an Account?</string>
    <string name="back_button">Back Button</string>
    <string name="logo">logo</string>
    <string name="or">Or</string>
    <string name="signup"><u>SignUp</u></string>
    <string name="forgot_your_password"><u>Forgot Your Password ?</u></string>
    <string name="forgot_password">Forgot\nPassword?</string>
    <string name="send_reset_link">Send Reset Link</string>
</resources>