<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userDetailsCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10sp"
    android:backgroundTint="@color/baseColor80"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/userNameTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/upiAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upi_address"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transactionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionid"
            android:textColor="@color/Black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="15sp"
        android:padding="16dp">

        <TextView
            android:id="@+id/transactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_withdraw"
            android:textColor="@color/colorWon" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/transactionCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="15sp"
        android:checked="false"
        tools:checked="true" />

</com.google.android.material.card.MaterialCardView>


