<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/newUserForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baseColor60">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newUserInputEmail"
            style="@style/OutlinedBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/Black"
            app:hintTextColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/Black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingStart="48dp"
                android:textColor="@color/Black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newUserInputPassword"
            style="@style/OutlinedBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/Black"
            app:hintTextColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserInputEmail"
            app:startIconDrawable="@drawable/ic_secure"
            app:startIconTint="@color/Black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="48dp"
                android:textColor="@color/Black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newUserInputUserName"
            style="@style/OutlinedBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/user_id"
            android:textColorHint="@color/Black"
            app:hintTextColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUserInputPassword"
            app:startIconDrawable="@drawable/ic_name"
            app:startIconTint="@color/Black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingStart="48dp"
                android:textColor="@color/Black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newUserInputInitialAmount"
            style="@style/OutlinedBoxStyle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/initial_amount"
            android:textColorHint="@color/Black"
            app:hintTextColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUserInputUserName"
            app:startIconDrawable="@drawable/ic_secure"
            app:startIconTint="@color/Black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserInitialAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="48dp"
                android:text="@string/_0_0"
                android:textColor="@color/Black" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/baseColor"
            android:text="@string/create_new_user"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserInputInitialAmount" />

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/error"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnNewUser" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
