<?xml version="1.0" encoding="UTF-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baseColor60">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/authScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            tools:context=".ui.view.fragment.AuthFragment">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50sp"
                android:background="@drawable/app_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMobile"
                style="@style/OutlinedBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/email_address"
                android:textColorHint="@color/Black"

                app:hintTextColor="@color/Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:textColor="@color/Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingStart="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/OutlinedBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/Black"

                app:hintTextColor="@color/Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutMobile"
                app:startIconDrawable="@drawable/ic_name"
                app:startIconTint="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:textColor="@color/Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:text="@string/login"
                android:textColor="@color/Black"
                android:backgroundTint="@color/baseColor"
                app:cornerRadius="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/loading"
            android:layout_gravity="center"
            android:shadowColor="@color/colorPrimary"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="100dp"
            android:text="@string/error_message"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="serif"
            android:textColor="@color/colorPrimary" />
    </FrameLayout>
</layout>